Правки (добавил nav, убрал role="img")

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -23,7 +23,7 @@
               <h1 class="company-culture__title" id="company-culture-title">
                 COMPANY CULTURE
               </h1>
-              <div
+              <nav
                 class="company-culture__icons"
                 role="navigation"
                 aria-label="Социальные сети и контакты"
@@ -60,12 +60,11 @@
                     class="company-culture__icon company-culture__icon--mail"
                   />
                 </a>
-              </div>
+              </nav>
             </div>
 
             <div
               class="company-culture__item company-culture__item--large"
-              role="img"
               aria-label="Современное открытое рабочее пространство"
             >
               <picture>
@@ -91,7 +90,6 @@
 
             <div
               class="company-culture__item company-culture__item--smile"
-              role="img"
               aria-label="Счастливые сотрудники во время работы"
             >
               <picture>
@@ -117,7 +115,6 @@
 
             <div
               class="company-culture__item company-culture__item--flower"
-              role="img"
               aria-label="Рабочее место с элементами озеленения"
             >
               <picture>
@@ -155,7 +152,6 @@
 
             <div
               class="company-culture__item company-culture__item--coffee"
-              role="img"
               aria-label="Зона для кофе-брейков и неформального общения"
             >
               <picture>
@@ -187,7 +183,6 @@
 
             <div
               class="company-culture__item company-culture__item--door"
-              role="img"
               aria-label="Доступ к современным технологиям и ресурсам"
             >
               <picture>
@@ -219,7 +214,6 @@
 
             <div
               class="company-culture__item company-culture__item--silence"
-              role="img"
               aria-label="Зоны для сосредоточенной работы"
             >
               <picture>
